@@ -110,14 +110,10 @@ sealed class Screen {
 // ─── Entry Point ─────────────────────────────────────────────────────────────
 
 /**
- * Single startup line summarizing which AWT toolkit JBR/JDK picked and what
- * Linux display-server environment we're in. The Wayland-Native investigation
- * (docs/dev/wayland-investigation.md) needs every log we get back from a real
- * user to triangulate the toolkit-vs-session matrix; this line makes it
- * trivial to grep across `launcher.log` files attached to bundles.
- *
- * Always-on (not gated by AURA_WAYLAND_TRIAL) -- the diagnostic value applies
- * to every Linux user, not just trial participants.
+ * Single startup line summarizing which AWT toolkit the JDK picked and what
+ * Linux display-server environment we're in. Diagnostic value applies to
+ * every Linux user; trivial to grep across `launcher.log` files attached to
+ * bundles when a display issue gets reported.
  */
 private fun logToolkitAndSession() {
     if (!System.getProperty("os.name").lowercase().contains("linux")) return
@@ -145,7 +141,7 @@ private fun logToolkitAndSession() {
  * No-op on macOS/Windows. Failures are logged but never fatal -- a wrong icon
  * is annoying, not crash-worthy.
  */
-private fun setLinuxXToolkitAppClassName(name: String) { // TODO: Value of parameter 'name' is always 'Branding.WM_CLASS'
+private fun setLinuxXToolkitAppClassName() {
     if (!System.getProperty("os.name").lowercase().contains("linux")) return
     runCatching {
         // Triggers XToolkit class load + initial awtAppClassName assignment.
@@ -153,12 +149,12 @@ private fun setLinuxXToolkitAppClassName(name: String) { // TODO: Value of param
         val cls = Class.forName("sun.awt.X11.XToolkit")
         val field = cls.getDeclaredField("awtAppClassName")
         field.isAccessible = true
-        field.set(null, name)
+        field.set(null, Branding.WM_CLASS)
     }.onFailure {
         LoggerFactory.getLogger("Main").warn(
             "Could not override XToolkit.awtAppClassName ({}); " +
             "compositors may show a generic icon. Cause: {}",
-            name, it.toString()
+            Branding.WM_CLASS, it.toString()
         )
     }
 }
@@ -201,7 +197,7 @@ fun main() {
 
     // Beacon: the very first entry in the action ring -- handy when reading a
     // bundle to confirm what process / version / OS produced it.
-    hivens.core.diag.ActionRing.record(
+    ActionRing.record(
         "Launcher started (v${Branding.VERSION}, sessionId=$sessionId, os=${System.getProperty("os.name")})"
     )
 
@@ -214,12 +210,14 @@ fun main() {
     // initialize hadn't run yet.)
     NetworkState.initialize(paths.dataDir.resolve("ssl-bypasses.json"))
 
-    System.setProperty("jna.nosys", "true")
     System.setProperty("skiko.fps.limit", "60")
-    // X11 WM_CLASS = "AuraLauncher". -Dawt.appClassName covers JBR; for stock
-    // OpenJDK we reflect into sun.awt.X11.XToolkit.awtAppClassName before the
-    // first window is created. See jvmArgs in client-ui/build.gradle.kts.
-    setLinuxXToolkitAppClassName(Branding.WM_CLASS)
+    // X11 WM_CLASS = "AuraLauncher". Stock OpenJDK derives WM_CLASS from
+    // argv[0] and exposes no public knob to override it, so we reflect into
+    // the package-private sun.awt.X11.XToolkit.awtAppClassName field before
+    // the first window is created. See jvmArgs --add-opens in
+    // client-ui/build.gradle.kts and the function doc on
+    // setLinuxXToolkitAppClassName for the cross-vendor details.
+    setLinuxXToolkitAppClassName()
 
     // Capture toolkit + session-type as soon as the toolkit has been triggered
     // by setLinuxXToolkitAppClassName above. One INFO line per launch -- gives
